@@ -1,9 +1,10 @@
 
 --------------------------------------------------------------------------------
- OSM2World 0.1.5                                                     2011-04-20 
+ OSM2World 0.1.5                                                     2011-??-?? 
 --------------------------------------------------------------------------------
  
  * zoom with +/- keys
+ * support for building:min_level
  
  
 --------------------------------------------------------------------------------
